--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3310,7 +3310,7 @@
         </activity>
 
         <activity android:name=".Settings$StyleSettingsActivity"
-                  android:label="@string/interface_style_title"
+                  android:label="@string/style_settings_title"
                   android:icon="@drawable/ic_settings_style"
                   android:taskAffinity="com.android.settings"
                   android:parentActivityName="Settings" >
@@ -3328,18 +3328,42 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/style_settings_summary"/>
         </activity>
-        <activity android:name="Settings$DevicePartsActivity"
+        <activity android:name=".Settings$DevicePartsActivity"
                   android:label="@string/omni_device_parts"
                   android:icon="@drawable/ic_settings_omnigears"
                   android:taskAffinity="">
-            <intent-filter android:priority="2">
-                <action android:name="com.android.settings.action.SETTINGS" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="-1">
+                <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
                        android:value="com.android.settings.category.ia.omni"/>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                        android:value="org.omnirom.device.DeviceParts" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/summary_empty"/>
+        </activity>
+        <activity android:name=".Settings$BarsSettingsSettingsActivity"
+                  android:label="@string/bars_settings_title"
+                  android:icon="@drawable/ic_bars_tile"
+                  android:taskAffinity="com.android.settings"
+                  android:parentActivityName="Settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="3">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                       android:value="com.android.settings.category.ia.omni"/>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="org.omnirom.omnigears.interfacesettings.BarsSettings" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/summary_empty"/>
         </activity>
     </application>
 </manifest>
