--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3299,7 +3299,7 @@
         <!-- Custom settings activity. -->
         <activity android:name=".Settings$OmniDashboardActivity"
                   android:label="@string/header_category_omni"
-                  android:icon="@drawable/omnirom_logo">
+                  android:icon="@drawable/ic_settings_style">
             <intent-filter android:priority="12">
                 <action android:name="com.android.settings.action.SETTINGS"/>
             </intent-filter>
@@ -3311,25 +3311,6 @@
                        android:resource="@string/omni_dashboard_summary"/>
         </activity>
 
-        <activity android:name=".Settings$StyleSettingsActivity"
-                  android:label="@string/interface_style_title"
-                  android:icon="@drawable/ic_settings_style"
-                  android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-                </intent-filter>
-            <intent-filter android:priority="1">
-                <action android:name="com.android.settings.action.SETTINGS" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.category"
-                       android:value="com.android.settings.category.ia.omni"/>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                       android:value="org.omnirom.omnigears.interfacesettings.StyleSettings" />
-            <meta-data android:name="com.android.settings.summary"
-                       android:resource="@string/style_settings_summary"/>
-        </activity>
         <activity android:name="Settings$DevicePartsActivity"
                   android:label="@string/omni_device_parts"
                   android:icon="@drawable/ic_settings_omnigears"
