--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3316,7 +3316,8 @@
         <activity android:name=".Settings$DevicePartsActivity"
                   android:label="@string/omni_device_parts"
                   android:icon="@drawable/ic_settings_omnigears"
-                  android:taskAffinity="">
+                  android:taskAffinity="com.android.settings"
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3335,8 +3336,7 @@
                   android:label="@string/button_settings_title"
                   android:icon="@drawable/ic_settings_buttons"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings"
-                  android:exported="true" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3351,11 +3351,11 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/summary_empty"/>
         </activity>
-        <activity android:name=".Settings$BarsSettingsSettingsActivity"
+        <activity android:name=".Settings$BarsSettingsActivity"
                   android:label="@string/bars_settings_title"
                   android:icon="@drawable/ic_bars_tile"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3374,7 +3374,7 @@
                   android:label="@string/display_rotation_title"
                   android:icon="@drawable/ic_display_rotation_tile"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3393,7 +3393,7 @@
                   android:label="@string/battery_light_settings_title"
                   android:icon="@drawable/ic_settings_leds"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$ButtonSettingsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3408,11 +3408,11 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/summary_empty"/>
         </activity>
-        <activity android:name=".Settings$MoreSettingsSettingsActivity"
+        <activity android:name=".Settings$MoreSettingsActivity"
                   android:label="@string/more_settings_title"
                   android:icon="@drawable/ic_settings_more"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3430,7 +3430,7 @@
         <activity android:name=".Settings$GlobalActionsSettingsActivity"
                   android:label="@string/global_actions_title"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$ButtonSettingsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
