Settings: fix and show OmniGears settings for all users
[YumeMichi]
Remove style and jaws settings

Change-Id: I7f2f61cf87f2c931ad89f8f326ce410ae1d7e086

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3315,7 +3315,8 @@
         <activity android:name=".Settings$DevicePartsActivity"
                   android:label="@string/omni_device_parts"
                   android:icon="@drawable/ic_settings_omnigears"
-                  android:taskAffinity="">
+                  android:taskAffinity="com.android.settings"
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3334,8 +3335,7 @@
                   android:label="@string/button_settings_title"
                   android:icon="@drawable/ic_settings_buttons"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings"
-                  android:exported="true" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3350,11 +3350,11 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/summary_empty"/>
         </activity>
-        <activity android:name=".Settings$BarsSettingsSettingsActivity"
+        <activity android:name=".Settings$BarsSettingsActivity"
                   android:label="@string/bars_settings_title"
                   android:icon="@drawable/ic_bars_tile"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3373,7 +3373,7 @@
                   android:label="@string/display_rotation_title"
                   android:icon="@drawable/ic_display_rotation_tile"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3392,7 +3392,7 @@
                   android:label="@string/battery_light_settings_title"
                   android:icon="@drawable/ic_settings_leds"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$ButtonSettingsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3407,11 +3407,11 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/summary_empty"/>
         </activity>
-        <activity android:name=".Settings$MoreSettingsSettingsActivity"
+        <activity android:name=".Settings$MoreSettingsActivity"
                   android:label="@string/more_settings_title"
                   android:icon="@drawable/ic_settings_more"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -3429,7 +3429,7 @@
         <activity android:name=".Settings$GlobalActionsSettingsActivity"
                   android:label="@string/global_actions_title"
                   android:taskAffinity="com.android.settings"
-                  android:parentActivityName="Settings" >
+                  android:parentActivityName="Settings$ButtonSettingsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
