--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3310,17 +3310,15 @@
             <meta-data android:name="com.android.settings.summary"
                        android:resource="@string/omni_dashboard_summary"/>
         </activity>
-
-        <activity android:name="Settings$DevicePartsActivity"
+        <activity android:name=".Settings$DevicePartsActivity"
                   android:label="@string/omni_device_parts"
                   android:icon="@drawable/ic_settings_omnigears"
-                  android:taskAffinity="">
-            <intent-filter android:priority="2">
-                <action android:name="com.android.settings.action.SETTINGS" />
+                  android:taskAffinity="com.android.settings"
+                  android:parentActivityName="Settings$OmniDashboardActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <meta-data android:name="com.android.settings.category"
-                       android:value="com.android.settings.category.ia.omni"/>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                        android:value="org.omnirom.device.DeviceParts" />
         </activity>
